# agentic-event-ledger

./: .env.example  .gitignore  .pre-commit-config.yaml  DESIGN.md  DOMAIN_NOTES.md  Dockerfile  INTERIM_REPORT.md  README.md  TRP1 Challenge Week 5_ Agentic Event Store & Enterprise Audit Infrastructure.md  TRP1 EventSourcing Practitioner Manual.md  docker-compose.yml  final_report.md  main.py  plan.md  pyproject.toml
data/: applicant_profiles.json  seed_events.jsonl
datagen/: company_generator.py  event_simulator.py  excel_generator.py  generate_all.py  pdf_generator.py  schema_validator.py
scripts/: generate_demo_data.py  run_outbox_relay.py  run_pipeline.py  seed_registry.py  show_history.py  test_full_lifecycle.py  verify_mcp_transitions.py
src/ledger/agents/: base_agent.py  credit_analysis_agent.py  stub_agents.py
src/ledger/application/: service.py
src/ledger/core/: agent_context.py  aggregates.py  audit_chain.py  errors.py  models.py  regulatory_package.py  upcasting.py  whatif.py
src/ledger/infrastructure/: outbox.py  parsers.py  store.py  upcasters.py
src/ledger/infrastructure/db/: connection.py  init_db.py  schema.sql
src/ledger/infrastructure/projections/: agent_performance.py  agent_session_view.py  application_summary.py  audit_trail.py  base.py  compliance_audit.py  daemon.py  distributed_daemon.py  (+1 more)
src/ledger/mcp/: __init__.py  errors.py  rate_limit.py  server.py
src/ledger/registry/: client.py
src/ledger/schema/: events.py
tests/: performance_verification.py  test_narratives.py
tests/integration/: test_agent_crash_recovery.py  test_audit_integrity.py  test_concurrency.py  test_concurrent_invariants.py  test_concurrent_load.py  test_distributed_daemon.py  test_mcp_lifecycle.py  test_projection_slos.py  test_projections_final.py  test_rebuild_from_scratch.py  test_store_lifecycle.py  test_upcasting_immutability.py  test_whatif_regulatory.py
tests/unit/: test_agent_context.py  test_aggregates.py  test_audit_chain.py  test_datagen.py  test_errors.py  test_upcasting.py
