[project]
name = "agentic-event-ledger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "httpx>=0.28.0",
    "langgraph>=0.2.0",
    "mcp>=1.0.0",
    "mypy>=1.19.1",
    "openai>=1.0.0",
    "pre-commit>=4.5.1",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.15.6",
    "structlog>=25.5.0",
    "reportlab>=4.0.0",
    "openpyxl>=3.1.0",
    "faker>=24.0.0",
    "pypdf>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["starter"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "ARG", "PTH", "RET"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["starter", "scripts"]

[[tool.mypy.overrides]]
module = ["datagen.*", "datagen"]
strict = false
ignore_errors = true

[[tool.mypy.overrides]]
module = ["tests.*"]
strict = false
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
